Perkin-UAT/force-app/main/default/objects/BD_Experience__c/BD_Experience__c.object-meta.xml
<CustomObject>
    <description>The object used to document field and training experience completed.</description>
    <label>Experience</label>
    <nameField>
        <displayFormat>EXP-{000000}</displayFormat>
        <label>Experience Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experiences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>