Perkin-UAT/force-app/main/default/objects/BD_Experience__c/fields/BD_Expertise_Removed__c.field-meta.xml
<CustomField>
    <fullName>BD_Expertise_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expertise Removed</label>
    <type>Checkbox</type>
</CustomField>