Perkin-UAT/force-app/main/default/objects/BD_Experience__c/fields/BD_External_Key__c.field-meta.xml
<CustomField>
    <fullName>BD_External_Key__c</fullName>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>