Perkin-UAT/force-app/main/default/objects/BD_Experience__c/fields/BD_Final_Score__c.field-meta.xml
<CustomField>
    <fullName>BD_Final_Score__c</fullName>
    <label>Final Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>