Perkin-UAT/force-app/main/default/objects/BD_Experience__c/fields/BD_Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>BD_Recommended_Action__c</fullName>
    <label>Recommended Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Create Expertise</fullName>
            </value>
            <value>
                <fullName>Remove Expertise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>