Perkin-UAT/force-app/main/default/objects/BD_Experience__c/fields/BD_Related_Expertise__c.field-meta.xml
<CustomField>
    <fullName>BD_Related_Expertise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Expertise</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SVMXC__Service_Group_Skills__c.SVMXC__Group_Member__c</field>
            <operation>equals</operation>
            <valueField>$Source.BD_Technician__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SVMXC__Service_Group_Skills__c</referenceTo>
    <relationshipLabel>Experience</relationshipLabel>
    <relationshipName>Experience</relationshipName>
    <type>Lookup</type>
</CustomField>