Perkin-UAT/force-app/main/default/objects/BD_Experience__c/fields/BD_Related_Skill__c.field-meta.xml
<CustomField>
    <fullName>BD_Related_Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Skill</label>
    <referenceTo>SVMXC__Skill__c</referenceTo>
    <relationshipLabel>Experiences</relationshipLabel>
    <relationshipName>Experience</relationshipName>
    <type>Lookup</type>
</CustomField>