Perkin-UAT/force-app/main/default/objects/BD_Experience__c/fields/BD_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>BD_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>