Perkin-UAT/force-app/main/default/objects/BD_Experience__c/fields/BD_Technician__c.field-meta.xml
<CustomField>
    <fullName>BD_Technician__c</fullName>
    <label>Technician</label>
    <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
    <relationshipLabel>Experience</relationshipLabel>
    <relationshipName>Experience</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>