Perkin-UAT/force-app/main/default/objects/BD_Experience__c/fields/BD_Type__c.field-meta.xml
<CustomField>
    <fullName>BD_Type__c</fullName>
    <description>Identifies from what source the experience originates.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>