Perkin-UAT/force-app/main/default/objects/BD_Experience__c/fields/BD_Work_Total__c.field-meta.xml
<CustomField>
    <fullName>BD_Work_Total__c</fullName>
    <label>Work Total</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>