Perkin-UAT/force-app/main/default/objects/BD_Experience__c/fields/SMAX_PS_Trained_Activity_Types__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Trained_Activity_Types__c</fullName>
    <label>Trained Activity Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SMAX_PS_Skill_Activity_Types</valueSetName>
    </valueSet>
</CustomField>