Perkin-UAT/force-app/main/default/objects/BD_Experience__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BD_External_Key__c</columns>
    <columns>BD_Technician__c</columns>
    <columns>BD_Related_Skill__c</columns>
    <columns>BD_Field_Score__c</columns>
    <columns>BD_Work_Total__c</columns>
    <columns>BD_Training_Score__c</columns>
    <columns>BD_Final_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>